--- a/package.json
+++ b/package.json
@@ -19,7 +19,16 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "angular5-csv": "^0.2.11",
+    "file-saver": "^2.0.2",
+    "json2object": "^1.0.3",
+    "json2typescript": "^1.4.1",
+    "moment": "^2.29.0",
+    "ngx-bootstrap": "^6.1.0",
+    "ngx-pagination": "^5.0.0",
+    "papaparse": "^5.3.0",
     "rxjs": "~6.5.5",
+    "rxjs-compat": "^6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
